--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
+    "mongoose": "^4.3.4",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
